Добавлена страница добавления объявления.

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -31,6 +31,8 @@
         text-decoration: none; /* Убирает подчеркивание для ссылок */
       }
     </style>
+
+<!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADe7nwdczg1gKZRVz_9i4rnMshprY92_Y&libraries=places"></script>-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
